painpoint ImgCtn on mobile fix 80vw

--- a/src/styles/legal.module.css
+++ b/src/styles/legal.module.css
@@ -191,7 +191,8 @@
     }
 
     .imgCtn{
-        width: 100%;
+        width: 85vw;
+        height: auto;
         display: flex;
         flex-direction: row;
         justify-content: center;
